# language-world-model-forgetting

./: .gitignore  pyproject.toml
configs/: b15_control.yaml  b15_mix00.yaml  b15_mix10.yaml  b15_mix25.yaml  b15_mix50.yaml  b15full_mix00.yaml  base_control.yaml  base_mix00.yaml  base_mix10.yaml  base_mix25.yaml  base_mix50.yaml  cal_lr1e4.yaml  cal_lr5e5.yaml  control_replay_only.yaml  lora_control.yaml  lora_mix00.yaml  lora_mix10.yaml  lora_mix25.yaml  lora_mix50.yaml  phase1_05B_instruct_mix00.yaml  phase1_05B_instruct_mix10.yaml  phase1_05B_instruct_mix25.yaml  phase1_05B_instruct_mix50.yaml
docs/: EXPERIMENTS.md
docs/plans/: 2026-06-26-lwm-forgetting-implementation.md
docs/specs/: 2026-06-25-lwm-forgetting-design.md
scripts/: RUNBOOK_AML.md  compute_bootstrap.sh  fetch_replay.py  prep_batcha.py  prep_cache.py
src/lwmf/: config.py  results.py  run.py  schema.py  train.py
src/lwmf/data/: collator.py  format.py  mixing.py  sandbox.py  terminal_gen.py
src/lwmf/eval/: general.py  simulation.py
tests/: test_collator.py  test_config.py  test_format.py  test_general_eval.py  test_mixing.py  test_results.py  test_run.py  test_sandbox.py  test_schema.py  test_simulation.py  test_smoke.py  test_terminal_gen.py  test_train.py
