[project]
name = "lwmf"
version = "0.1.0"
description = "Language World Model forgetting experiment harness"
requires-python = ">=3.11"
# Core deps: enough to import every module and run the offline unit suite.
# All heavy GPU-only libs live in the [gpu] extra so local (macOS, no CUDA)
# installs don't choke on bitsandbytes.
# Core deps: enough to import every module and run the offline unit suite.
# Pinned to a mutually-compatible mid-2024 stack: lm-eval 0.4.4 (py3.11-friendly)
# needs the OLD dataset-loading conventions, so datasets/huggingface_hub/transformers
# must stay pre-2025 (newer hub rejects bare dataset ids like "hellaswag" and newer
# datasets dropped trust_remote_code that lm-eval 0.4.4's MMLU uses). transformers 5.x
# would force a too-new hub, so cap transformers at 4.45.
dependencies = [
  "torch>=2.3",
  "transformers>=4.44,<4.46",
  "datasets>=2.20,<2.22",
  "huggingface_hub>=0.23,<0.25",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Installed only on the GPU node (training + lm-eval). bitsandbytes has no macOS
# CUDA wheel — keep it out of the local install. trl is intentionally absent: the
# trainer uses transformers.Trainer directly, not trl.SFTTrainer.
gpu = ["peft>=0.12,<0.14", "accelerate>=0.33,<0.35", "bitsandbytes>=0.43", "lm-eval==0.4.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "smoke: end-to-end checks that download models / use GPU (deselect with -m 'not smoke')",
  "gpu: requires CUDA",
]
addopts = "-m 'not smoke and not gpu'"
testpaths = ["tests"]
